--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,24 @@
 <section class="section-white">
     <div class="container">
 
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
             </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="assets/img/banner1.png" alt="...">
+            <!-- Carousel items -->
+            <div class="carousel-inner carousel-zoom">
+                <div class="active item"><img class="img-responsive" src="assets/img/banner1.png">
                 </div>
-                <div class="item">
-                    <img src="assets/img/banner2.png" alt="...">
+                <div class="item"><img class="img-responsive" src="assets/img/banner2.png">
                 </div>
-                <div class="item">
-                    <img src="assets/img/banner3.png" alt="...">
+                <div class="item"><img class="img-responsive" src="assets/img/banner3.png">
                 </div>
             </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+            <!-- Carousel nav -->
+            <a class="carousel-control left" href="#carousel" data-slide="prev">‹</a>
+            <a class="carousel-control right" href="#carousel" data-slide="next">›</a>
         </div>
         <br><br>
         <h4>หนังสือแนะนำ</h4>
