--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,16 @@ body {
     font-family: 'Kanit', sans-serif;
 }
 
+input {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
+.alert-danger {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
 p {
     font-family: 'Kanit', sans-serif;
 }
@@ -18,65 +28,10 @@ h3 {
     font-family: 'Kanit', sans-serif;
 }
 
-
-/* Shared */
-
-.loginBtn {
-    box-sizing: border-box;
-    position: relative;
-    /* width: 13em;  - apply for fixed size */
-    margin: 0.2em;
-    padding: 0 15px 0 46px;
-    border: none;
-    text-align: left;
-    line-height: 34px;
-    white-space: nowrap;
-    border-radius: 0.2em;
-    font-size: 16px;
-    color: #FFF;
+html {
+    margin: 40px auto;
+    text-align: center;
 }
-
-.loginBtn:before {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 34px;
-    height: 100%;
-}
-
-.loginBtn:focus {
-    outline: none;
-}
-
-.loginBtn:active {
-    box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
-}
-
-
-/* Facebook */
-
-.loginBtn--facebook {
-    background-color: #4C69BA;
-    background-image: linear-gradient(#4C69BA, #3B55A0);
-    /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
-    text-shadow: 0 -1px 0 #354C8C;
-}
-
-.loginBtn--facebook:before {
-    border-right: #364e92 1px solid;
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
-}
-
-.loginBtn--facebook:hover,
-.loginBtn--facebook:focus {
-    background-color: #5B7BD5;
-    background-image: linear-gradient(#5B7BD5, #4864B1);
-}
-
-
-/* Google */
 
 .img-modal {
     width: 20%;
@@ -85,9 +40,32 @@ h3 {
     margin-left: 0%;
 }
 
-.main {
-    max-width: 320px;
-    margin: 0 auto;
+
+/* --------------------facebook---------------------------- */
+
+.btn-facebook {
+    background: #3B5998;
+    border-radius: 0;
+    color: #fff;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #263961;
+}
+
+.btn-facebook:link,
+.btn-facebook:visited {
+    color: #fff;
+}
+
+.btn-facebook:active,
+.btn-facebook:hover {
+    background: #263961;
+    color: #fff;
+}
+
+.active-cyan-4 input[type=text]:focus:not([readonly]) {
+    border: 1px solid #4dd0e1;
+    box-shadow: 0 0 0 1px #4dd0e1;
 }
 
 .login-or {
@@ -118,35 +96,18 @@ h3 {
     margin-bottom: 0px !important;
 }
 
-h3 {
+
+/* ------------------- cart ---------------------- */
+
+.badge {
+    background-color: #E75959;
+    border-radius: 10px;
+    color: white;
+    display: inline-block;
+    font-size: 12px;
+    line-height: 1;
+    padding: 3px 7px;
     text-align: center;
-    line-height: 300%;
-}
-
-
-/* --------------------facebook---------------------------- */
-
-html {
-    margin: 40px auto;
-    text-align: center;
-}
-
-.btn-facebook {
-    background: #3B5998;
-    border-radius: 0;
-    color: #fff;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #263961;
-}
-
-.btn-facebook:link,
-.btn-facebook:visited {
-    color: #fff;
-}
-
-.btn-facebook:active,
-.btn-facebook:hover {
-    background: #263961;
-    color: #fff;
+    vertical-align: middle;
+    white-space: nowrap;
 }
