--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,83 +1,86 @@
-<div class="container">
-    <!-- <nav class="navbar navbar-default navbar-fixed-top navcarbox" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-                <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" [routerLink]="['']">
-                    <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
-                </a>
-            </div>
-
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                    <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a></li>
-                    <li class="dropdown" *ngIf="accessToken">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">บัญชีผู้ใช้ <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" [routerLink]="['profile']"><i class="fa fa-smile-o"></i>&nbsp; สวัสดี {{displayName}}</a></li>
-                            <li><a href="#" [routerLink]="['sell']"><i class="fa fa-briefcase"></i>&nbsp; รายการฝากขาย</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+<!-- <div class="container"> -->
+<nav class="navbar-default">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" href="#" [routerLink]="['']">
+                <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
+            </a>
         </div>
-    </nav> -->
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-                <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" [routerLink]="['']">
-                    <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
-                </a>
-            </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <div class="col-sm-3 col-md-3">
-                    <form class="navbar-form" role="search">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="ค้นหาหนังสือ" name="search">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                    <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a></li>
-                    <li class="dropdown" *ngIf="accessToken">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">สวัสดี {{displayName}} <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" [routerLink]="['profile']"><i class="fa fa-smile-o"></i>&nbsp; จัดการบัญชีของฉัน</a></li>
-                            <li><a href="#" [routerLink]="['sell']"><i class="fa fa-briefcase"></i>&nbsp; รายการขายของฉัน</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">วิศวกรรมศาสตร์ <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">เครื่องกล</a></li>
+                        <li><a href="#">ยานยนต์</a></li>
+                        <li><a href="#">อากาศยานต์</a></li>
+                        <li><a href="#">ไฟฟ้า</a></li>
+                        <li><a href="#">เคมี</a></li>
+                        <li><a href="#">สาขาอื่นๆ</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">เตรียมสอบมัธยม <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">GAT/PAT</a></li>
+                        <li><a href="#">ฟิสิกส์</a></li>
+                        <li><a href="#">เคมี</a></li>
+                        <li><a href="#">ชีววิทยา</a></li>
+                        <li><a href="#">คณิตศาสตร์</a></li>
+                        <li><a href="#">ภาษาอังกฤษ</a></li>
+                        <li><a href="#">วิชาอื่นๆ</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">ภาษาต่างประเทศ </a>
+                </li>
+                <li>
+                    <a href="#">กฎหมาย </a>
+                </li>
+            </ul>
+
+
+
+
+
+            <ul class="nav navbar-nav navbar-right">
+                <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
+                <li *ngIf="accessToken"><a href="#" [routerLink]="['shoppingcart']"><i class="fa fa-shopping-bag" aria-hidden="true"></i><span class="badge">3</span></a></li>
+                <li *ngIf="!accessToken">
+                    <a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a>
+                </li>
+                <li class="dropdown" *ngIf="accessToken">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">บัญชีผู้ใช้ 
+                                                <span class="caret"></span>
+                                            </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#" [routerLink]="['profile']"><i class="fa fa-user"></i>&nbsp; คุณ{{displayName}}</a>
+                        </li>
+                        <li>
+                            <a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
+
 
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -96,29 +99,28 @@
                 <br>
                 <div class="login-or">
                     <hr class="hr-or">
-                    <span class="span-or"><p>หรือ</p></span>
+                    <span class="span-or">หรือ</span>
                 </div>
-
+                <br>
                 <form (ngSubmit)="login()" #memberLoginForm="ngForm">
                     <div class="form-group">
-                        <label for="inputUsernameEmail">อีเมล</label>
+                        <!--<label for="inputUsernameEmail">อีเมล</label>-->
                         <input type="text" class="form-control" id="inputUsernameEmail" placeholder="Email" name="email" required [(ngModel)]="memberLogin.email" #email="ngModel">
                     </div>
                     <div class="form-group">
-                        <a class="pull-right" href="#">ลืมรหัสผ่าน</a>
-                        <label for="inputPassword">รหัสผ่าน</label>
+                        <a href="#" style="float: right; color:#F0BD33" class="pull-right" (click)="resetPassword()">ลืมรหัสผ่าน</a>
+                        <!--<label for="inputPassword">รหัสผ่าน</label>-->
                         <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" required [(ngModel)]="memberLogin.password" #password="ngModel">
                     </div>
-                    <p>ยังไม่มีบัญชีผู้ใช้ใช่ไหม? <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">ลงทะเบียนที่นี่</a></p>
-                    <button type="submit" class="btn btn-primary" [disabled]="!memberLoginForm.form.valid">
-                    เข้าสู่ระบบ
-                  </button>
 
+                    <br><br>
+                    <p>ยังไม่มีบัญชีผู้ใช้ใช่ไหม? <a href="#" style="color:#F0BD33" onClick="$('#loginbox').hide(); $('#signupbox').show()"> ลงทะเบียนที่นี่</a></p>
+                    <button type="submit" class="btn btn-primary" [disabled]="!memberLoginForm.form.valid">เข้าสู่ระบบ</button>
                 </form>
-
             </div>
             <br>
         </div>
+
 
         <!-- Modal Signup -->
         <div class="modal-content" id="signupbox" style="display:none;">
@@ -127,49 +129,46 @@
                 <img class="img-modal" src="assets/img/mebooks.png">
             </div>
             <div class="modal-body">
-                <h3>สมัครสมาชิก</h3>
+                <h3 style="margin: center;">สมัครสมาชิก</h3>
                 <form (ngSubmit)="signup()" #memberSignupForm="ngForm">
                     <div class="form-group">
-                        <label for="inputUsername">ชื่อผู้ใช้</label>
+                        <!--<label for="inputUsername">ชื่อผู้ใช้</label>-->
                         <input type="text" class="form-control" id="inputUsername" placeholder="ชื่อผู้ใช้" name="username" required [(ngModel)]="memberSignup.username" #username="ngModel">
                         <div [hidden]="username.valid || username.pristine" class="alert alert-danger">กรุณากรอกชื่อผู้ใช้</div>
                     </div>
                     <div class="form-group">
-                        <label for="inputEmail">อีเมล</label>
+                        <!--<label for="inputEmail">อีเมล</label>-->
                         <input type="text" class="form-control" id="inputEmail" placeholder="อีเมล" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" name="email" required [(ngModel)]="memberSignup.email" #email="ngModel">
                         <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
                             <div [hidden]="!email.hasError('required')">กรุณากรอกอีเมล</div>
                             <div [hidden]="!email.hasError('pattern')">รูปแบบอีเมลควรเป็น
                                 <small>
-                                <b>joe@abc.com</b>
-                            </small>
+                                                        <b>joe@abc.com</b>
+                                                    </small>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="password">รหัสผ่าน</label>
-                        <input type="password" class="form-control" id="password" placeholder="อย่างน้อย 6 ตัว" minlength="6" [(ngModel)]="memberSignup.password" name="password" #password="ngModel">
-                        <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
-
+                        <!--<label for="password">รหัสผ่าน</label>-->
+                        <input type="password" class="form-control" id="password" placeholder="หัสผ่านอย่างน้อย 6 ตัว" minlength="6" [(ngModel)]="memberSignup.password" name="password" #password="ngModel">
+                        <div [hidden]="password.valid || password.pristine" class="alert alert-danger" role="alert">
                             <div [hidden]="!password.hasError('minlength')">รหัสผ่านอย่างน้อย 6 ตัวอักษร</div>
                         </div>
                         <!-- <div [hidden]="!password.hasError('minlength')">Password ต้องมากกว่า 6 ตัวอักษร</div> -->
                     </div>
 
                     <div class="form-group">
-                        <label for="inputConfirmPassword">ยืนยันรหัสผ่าน</label>
-                        <input type="password" class="form-control" id="inputConfirmPassword" placeholder="อย่างน้อย 6 ตัว" validateEqual="password" name="confirmPassword" required [(ngModel)]="memberSignup.confirmPassword" #confirmPassword="ngModel">
+                        <!--<label for="inputConfirmPassword">ยืนยันรหัสผ่าน</label>-->
+                        <input type="password" class="form-control" id="inputConfirmPassword" placeholder="ยืนยันรหัสผ่าน" validateEqual="password" name="confirmPassword" required [(ngModel)]="memberSignup.confirmPassword" #confirmPassword="ngModel">
                         <div [hidden]="confirmPassword.valid || confirmPassword.pristine" class="alert alert-danger">
                             รหัสผ่านไม่ต้องกัน
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary" [disabled]="!memberSignupForm.form.valid">
-                    ลงทะเบียน
-                  </button>
+                    <button type="submit" class="btn btn-primary" [disabled]="!memberSignupForm.form.valid"> ลงทะเบียน</button>
                 </form>
                 <br>
-                <p>ถ้ามีบัญชีผู้ใช้แล้ว <a id="signinlink" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">เข้าสู่ระบบที่นี่</a>
+                <p>ถ้ามีบัญชีผู้ใช้แล้ว <a id="signinlink" style="color:#F0BD33" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">เข้าสู่ระบบที่นี่</a>
             </div>
             <br>
         </div>
