--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,146 +1,3 @@
-<section class="section-white">
-    <div class="container">
+<title>หน้าแรก | MEBOOKs</title>
 
-        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner carousel-zoom">
-                <div class="active item"><img class="img-responsive" src="assets/img/banner1.png">
-                </div>
-                <div class="item"><img class="img-responsive" src="assets/img/banner2.png">
-                </div>
-                <div class="item"><img class="img-responsive" src="assets/img/banner3.png">
-                </div>
-            </div>
-            <!-- Carousel nav -->
-            <a class="carousel-control left" href="#carousel" data-slide="prev">‹</a>
-            <a class="carousel-control right" href="#carousel" data-slide="next">›</a>
-        </div>
-        <br><br>
-        <h4>หนังสือแนะนำ</h4>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <div class="my-list">
-                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                <br><br>
-                <span>ชีววิทยา</span>
-                <span class="pull-right">110 บาท</span>
-                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
-                <div class="detail">
-                    <p>มือ 2</p>
-                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
-                    <a href="#" class="btn btn-info">ซื้อ</a>
-                    <a href="#" class="btn btn-info">Details</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<app-banner></app-banner>
