--- a/src/app/profiles/profile.component.css
+++ b/src/app/profiles/profile.component.css
@@ -4,6 +4,21 @@
      font-family: 'Kanit', sans-serif;
  }
  
+ input {
+     border-radius: 0px;
+     font-family: 'Kanit', sans-serif;
+ }
+ 
+ .alert-danger {
+     border-radius: 0px;
+     font-family: 'Kanit', sans-serif;
+ }
+ 
+ select {
+     border-radius: 0px;
+     font-family: 'Kanit', sans-serif;
+ }
+ 
  h4 {
      font-family: 'Kanit', sans-serif;
  }
