--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,13 @@ p {
     font-family: 'Kanit', sans-serif;
 }
 
+input {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
 .position {
-    background-color: rgba(240, 164, 2, 0.96);
+    background-color: hsla(41, 98%, 48%, 0.96);
     flex: auto;
     float: center;
     height: 100%
