--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -7,7 +7,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a [routerLink]="['']">Home</a></li>
                 <!-- <li class="item"><a href="category.html">หน้าแรก</a></li> -->
-                <li class="breadcrumb-item active" aria-current="page">ตร้าสินค้า</li>
+                <li class="breadcrumb-item active" aria-current="page">ตะกร้าสินค้า</li>
             </ol>
         </nav>
     </div>
