--- a/src/app/admin/account/account.component.html
+++ b/src/app/admin/account/account.component.html
@@ -1,6 +1,8 @@
+<title>จัดการบัญชี | Admin</title>
+
 <div class="panel panel-default">
     <div class="panel-heading">
-        Member Management
+        Account Management
     </div>
     <div class="panel-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
