--- a/src/app/users/user.component.html
+++ b/src/app/users/user.component.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" href="#" [routerLink]="['']">
+            <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" href="#" [routerLink]="['/user']">
                 <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
             </a>
         </div>
@@ -57,7 +57,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
-                <li *ngIf="accessToken"><a href="#" [routerLink]="['/cart']"><i class="fa fa-shopping-bag" aria-hidden="true"></i><span class="badge">3</span></a></li>
+                <li *ngIf="accessToken"><a href="#" [routerLink]="['cart']"><i class="fa fa-shopping-bag" aria-hidden="true"></i><span class="badge">3</span></a></li>
                 <li *ngIf="!accessToken">
                     <a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a>
                 </li>
@@ -67,10 +67,10 @@
                                                 </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#" [routerLink]="['/profile']"><i class="fa fa-user"></i>&nbsp; บัญชีคุณ{{displayName}}</a>
+                            <a href="#" [routerLink]="['/user/profile']"><i class="fa fa-user"></i>&nbsp; บัญชีคุณ{{displayName}}</a>
                         </li>
                         <li *ngIf="isAdmin==true">
-                            <a href="#" [routerLink]="['admin/dashboard']" target="_blank"><i class="fa fa-gears"></i>&nbsp; Admin</a>
+                            <a href="#" [routerLink]="['/admin/dashboard']" target="_blank"><i class="fa fa-gears"></i>&nbsp; Admin</a>
                         </li>
                         <li>
                             <a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a>
