create banner admin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -55,7 +55,7 @@
                     <li><a href="#" [routerLink]="['/admin/transport']">Transportation</a></li>
                 </ul>
             </li>
-            <li><a href="#" data-target-id="applications" [routerLink]="['/admin/Inbox']"><i class="fa fa-pencil fa-fw"></i>Inbox</a></li>
+            <li><a href="#" data-target-id="applications" [routerLink]="['/admin/inbox']"><i class="fa fa-pencil fa-fw"></i>Inbox</a></li>
             <li><a href="#" data-target-id="settings" [routerLink]="['/admin/setting']"><i class="fa fa-cogs fa-fw"></i>Settings</a></li>
         </ul>
     </div>
