--- a/src/app/users/components/banner/banner.component.html
+++ b/src/app/users/components/banner/banner.component.html
@@ -1,19 +1,13 @@
-<br>
 <section class="section-white">
     <div class="container">
         <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
+                <li data-target="#carousel" *ngFor="let banners of fileUploads;let i = index" [attr.data-slide-to]="i" [ngClass]="{'active': i == '0'}"></li>
             </ol>
 
             <div class="carousel-inner carousel-zoom">
-                <div class="active item"><img class="img-responsive" src="assets/img/banner1.png">
-                </div>
-                <div class="item"><img class="img-responsive" src="assets/img/banner2.png">
-                </div>
-                <div class="item"><img class="img-responsive" src="assets/img/banner3.png">
+                <div *ngFor="let banners of fileUploads;let i = index" [ngClass]="{'item': i != null,'active': i == '0'}">
+                    <img class="img-responsive" src="{{banners.url}}" alt="{{banners.name}}">
                 </div>
             </div>
         </div>
